<resources>
    <string name="app_name">Court Counter</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="score">0</string>
    <string name="three_pointer">+3 points</string>
    <string name="two_pointer">+2 points</string>
    <string name="free_throw">Free Throw</string>
    <string name="reset_button">RESET SCORE</string>
</resources>
