<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.courtcounter.MainActivity">
    <LinearLayout
        android:id="@+id/linear_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:textColor="#616161"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:text="@string/team_b" />
        <TextView
            android:id="@+id/team_b_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="24dp"
            android:fontFamily="sans-serif-light"
            android:textColor="#000"
            android:textSize="56sp"
            android:text="@string/score"/>
        <Button
            android:id="@+id/three_point_buttonB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:textColor="#000"
            android:text="@string/three_pointer"
            android:onClick="threePointerB"/>
        <Button
            android:id="@+id/two_point_buttonB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:textColor="#000"
            android:text="@string/two_pointer"
            android:onClick="twoPointerB"/>
        <Button
            android:id="@+id/free_throw_buttonB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:textColor="#000"
            android:text="@string/free_throw"
            android:onClick="freeThrowB"/>
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimaryDark"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:textColor="#616161"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:text="@string/team_a"/>
        <TextView
            android:id="@+id/team_a_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="24dp"
            android:fontFamily="sans-serif-light"
            android:textColor="#000"
            android:textSize="56sp"
            android:text="@string/score"/>
        <Button
            android:id="@+id/three_point_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:textColor="#000"
            android:text="@string/three_pointer"
            android:onClick="threePointer"/>
        <Button
            android:id="@+id/two_point_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:textColor="#000"
            android:text="@string/two_pointer"
            android:onClick="twoPointer"/>
        <Button
            android:id="@+id/free_throw_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:textColor="#000"
            android:text="@string/free_throw"
            android:onClick="freeThrow"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/reset_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_alignParentBottom="true"
        android:text="@string/reset_button"
        android:textAppearance="@android:style/TextAppearance.Small"
        android:onClick="resetButton"/>
</RelativeLayout>
